# xtalkit

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/dev/: shry-module-design.md
docs/superpowers/plans/: 2026-06-20-xtalkit.md  2026-07-03-build-cif-from-refinement.md  2026-07-04-enumerate-streaming-parallel.md
docs/superpowers/specs/: 2026-06-20-xtalkit-design.md
docs/user/: shry-enumeration.md
scripts/: build_enumlib.sh  build_offline_bundle.sh  build_wyckoff_db.py
tests/: test_builder.py  test_cli.py  test_enumerator.py  test_ewald.py  test_exporter.py  test_integration.py  test_marker.py  test_matcher.py  test_shry_module.py  test_skeleton.py  test_spacegroup.py  test_tui.py
tests/fixtures/: disordered_binary.cif  simple.cif
xtalkit/: __init__.py  _env.py  builder.py  cli.py  enumerator.py  ewald.py  exporter.py  marker.py  matcher.py  skeleton.py  spacegroup.py  tui.py  utils.py
xtalkit/data/: wyckoff.json
xtalkit/enumeration/: __init__.py  bruteforce.py  cif_io.py  degeneracy.py  fingerprint.py  formula.py  manifest.py  occupancy.py  postprocess.py  shry_backend.py  shry_count.py  shry_enum.py  shry_prepare.py  shry_verify.py  supercell_backend.py  symmetry_audit.py
