[project]
name = "xtalkit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "gemmi>=0.7.5",
    "rich>=15.0.0",
]

# `enumerate` subcommand only — keeps the core (mark/skeleton/info/fetch)
# lightweight. Install with:  uv sync --extra enumerate
[project.optional-dependencies]
enumerate = ["pymatgen>=2024.5"]

[project.scripts]
xtalkit = "xtalkit.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xtalkit"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
